--- a/php_form_divide/style.css
+++ b/php_form_divide/style.css
@@ -67,3 +67,25 @@ p {
   border-radius: 50%;
   background-color: #FF2834;
 }
+
+.btn {
+  width: 80px;
+  height: 26px;
+  display: block;
+  border: solid 1px #999;
+  color: #fff;
+  text-align: center;
+  line-height: 26px;
+  border-radius: 4px;
+}
+.btn:hover {
+  transition: .2s ease-in-out;
+  background-color: #666;
+}
+
+a,
+a:hover,
+a:focus {
+  text-decoration: none;
+  color: #fff;
+}
