--- a/php_one_word_blog/style.css
+++ b/php_one_word_blog/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 10px;
   background-color: #333;
@@ -83,9 +87,50 @@ p {
   background-color: #666;
 }
 
+.input__content{
+  height:100px;
+}
+
 a,
 a:hover,
 a:focus {
   text-decoration: none;
   color: #fff;
+}
+
+.iphone7 {
+  width: 340px;
+  height: 620px;
+  margin: 0 auto;
+  margin-top: 50px;
+  border-top: solid 1px #ddd;
+  border-right: solid 1px #222;
+  border-bottom: solid 1px #111;
+  border-left: solid 1px #888;
+  border-radius: 12px;
+  background-color: #222;
+  padding-top: 20px;
+          box-shadow:6px 6px 17px 1px #000000;
+     -moz-box-shadow:6px 6px 17px 1px #000000;
+  -webkit-box-shadow:6px 6px 17px 1px #000000;
+}
+
+.iphone7__screen {
+  width: 300px;
+  height: 540px;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: solid 3px #000;
+  background-color: #333;
+  padding: 5px;
+  overflow: scroll;
+}
+.iphone7__button {
+  width: 35px;
+  height: 35px;
+  margin: 0 auto;
+  margin-top: 10px;
+  border-radius: 50%;
+  border: solid 1px #111;
+  background-color: #222;
 }
