--- a/php_one_word_blog/style.css
+++ b/php_one_word_blog/style.css
@@ -3,6 +3,8 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   font-size: 10px;
   background-color: #333;
   margin: 0;
@@ -14,11 +16,22 @@ h1 {
   font-size: 1.2em;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
-  margin: 0 0 1.2em 0;
 }
 
 p {
   color: #fff;
+}
+
+.article__title,
+.article__content {
+  line-height: 1.8;
+}
+
+.header {
+  display: block;
+  width: 100%;
+  background-color: #222;
+  padding: 12px;
 }
 
 .fm input[type="text"] {
@@ -82,6 +95,7 @@ p {
   line-height: 26px;
   border-radius: 4px;
 }
+
 .btn:hover {
   transition: .2s ease-in-out;
   background-color: #666;
@@ -91,46 +105,15 @@ p {
   height:100px;
 }
 
+hr {
+  border: none;
+  border-top: solid 1px #666;
+  margin: 12px 0 12px 0;
+}
+
 a,
 a:hover,
 a:focus {
   text-decoration: none;
   color: #fff;
-}
-
-.iphone7 {
-  width: 340px;
-  height: 620px;
-  margin: 0 auto;
-  margin-top: 50px;
-  border-top: solid 1px #ddd;
-  border-right: solid 1px #222;
-  border-bottom: solid 1px #111;
-  border-left: solid 1px #888;
-  border-radius: 12px;
-  background-color: #222;
-  padding-top: 20px;
-          box-shadow:6px 6px 17px 1px #000000;
-     -moz-box-shadow:6px 6px 17px 1px #000000;
-  -webkit-box-shadow:6px 6px 17px 1px #000000;
-}
-
-.iphone7__screen {
-  width: 300px;
-  height: 540px;
-  margin: 0 auto;
-  border-radius: 4px;
-  border: solid 3px #000;
-  background-color: #333;
-  padding: 5px;
-  overflow: scroll;
-}
-.iphone7__button {
-  width: 35px;
-  height: 35px;
-  margin: 0 auto;
-  margin-top: 10px;
-  border-radius: 50%;
-  border: solid 1px #111;
-  background-color: #222;
 }
