--- a/demo/sample2/style.css
+++ b/demo/sample2/style.css
@@ -1,6 +1,12 @@
 div {
   box-sizing: border-box;
 }
+
+p {
+  margin: 5px 0;
+  font-size: 12px;
+}
+
 .l1,
 .l2,
 .l3 {
@@ -13,44 +19,45 @@ div {
 .l1person,
 .l2person,
 .l3person {
-  float: left;
   margin: 10px 10px 10px 10px;
 }
 
 .g1,
-.g2 {
-  display: inline-block;
-  width: 100%;
+.g2,
+.g3,
+.g4 {
   border: 1px solid #000;
   margin-top: 10px;
 }
 .g1person,
 .g2person,
-.g3person {
-  margin: 10px 10px 10px 10px;
+.g3person,
+.g4person {
+  margin: 10px;
 }
 
 .photo {
   width: 80px;
   height: 80px;
-  background-color: gray;
+  background-color: #ccc;
 }
 
-.person {
+.imgbox {
+  width: 200px;
+  height: 150px;
+  background-color: #ccc;
 }
 
 .btn {
   width:200px;
   height: 50px;
   border: 1px solid #000;
-  float: left;
 }
 
 .clear {
   clear: both;
 }
 
-p {
-  margin: 5px 0;
-  font-size: 12px;
+.hidden {
+  display: none; 
 }
