--- a/demo/sample2/style.css
+++ b/demo/sample2/style.css
@@ -20,6 +20,7 @@ p {
 .l2person,
 .l3person {
   margin: 10px 10px 10px 10px;
+  float: left;
 }
 
 .g1,
@@ -27,13 +28,16 @@ p {
 .g3,
 .g4 {
   border: 1px solid #000;
-  margin-top: 10px;
+  margin: 10px;
+  float: left;
+  width: 20%;
 }
 .g1person,
 .g2person,
 .g3person,
 .g4person {
   margin: 10px;
+  float: left;
 }
 
 .photo {
@@ -59,5 +63,5 @@ p {
 }
 
 .hidden {
-  display: none; 
+  display: none;
 }
